objects/CMPL123CME__Complaint__c.object
<CustomObject>
    <fields>
        <fullName>Investigation_Status__c</fullName>
        <label>Investigation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investigation Completed</fullName>
                </value>
                <value>
                    <fullName>Investigation Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigation_Summary_and_Conclusion__c</fullName>
        <label>Investigation Summary and Conclusion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Death_Harmed__c</fullName>
        <description>Checkbox is checked when either PRE1 or PRE2.1 is answered as "Yes"</description>
        <formula>IF(BMX_PRE1_Patient_or_operator_death__c = "Yes" || BMX_PRE2_1_Patient_or_operator_harmed__c = "Yes", TRUE, FALSE)</formula>
        <inlineHelpText>Checkbox is checked when either PRE1 or PRE2.1 is answered as "Yes"</inlineHelpText>
        <label>Is Death/Harmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification_Decision_Maker__c</fullName>
        <label>Justification Decision Maker</label>
        <length>255</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints_JDM</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Key_Value__c</fullName>
        <label>Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Investigation_Number__c</fullName>
        <formula>BMX_Investigation__r.Investigation_Evaluation_Number__c</formula>
        <label>Master Investigation Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfSamplesAffected__c</fullName>
        <label>Number of Sample affected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opened_By__c</fullName>
        <label>Opened By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opened_Date__c</fullName>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRE1P2__c</fullName>
        <label>PRE1.2 If yes, describe in detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name__c</fullName>
        <label>Patient First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <label>Patient ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <label>Patient Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_1__c</fullName>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>CMPL123CME__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name (Not Used)</label>
        <referenceTo>CMPL123__Device__c</referenceTo>
        <relationshipLabel>Complaints (Product Name)</relationshipLabel>
        <relationshipName>Complaints2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Re_Opened_By__c</fullName>
        <label>Re-Opened By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Opened_Date__c</fullName>
        <label>Re-Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reagent_material_code__c</fullName>
        <inlineHelpText>Correspond to Product Code for Reagent</inlineHelpText>
        <label>Reagent material code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Complaint_By__c</fullName>
        <label>Complaint Rejected By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Complaint_Date__c</fullName>
        <label>Complaint Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <label>Review Rejected By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <label>Review Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Inquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Inquiry</label>
        <referenceTo>Inquiry__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Investigation_Workflow_Status__c</fullName>
        <formula>BMX_Investigation__r.CMPL123_WF_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Investigation Workflow Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Analysis__c</fullName>
        <label>Root Cause Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SIG_Code_Code__c</fullName>
        <formula>LEFT(TEXT(BMX_SIG_Code__c), 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIG Code (Code)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Dangerous</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Marginal</fullName>
                </value>
                <value>
                    <fullName>Not Determined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social_Media_Impact__c</fullName>
        <label>Social Media Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer / Distributor</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Field Outsourced Companies</fullName>
                </value>
                <value>
                    <fullName>Regulatory Authorities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_for_Evaluation_By__c</fullName>
        <label>Submitted for Evaluation By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Evaluation_Date__c</fullName>
        <label>Submitted for Evaluation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Review_By__c</fullName>
        <label>Submitted for Review By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Review_Date__c</fullName>
        <label>Submitted for Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptom_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Symptom Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>SYMPTOM CODE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Complaints (Symptom Code)</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visitor_Address_Name__c</fullName>
        <label>Visitor Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visitor_City__c</fullName>
        <label>Visitor City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visitor_Country__c</fullName>
        <label>Visitor Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visitor_Postal_Code__c</fullName>
        <label>Visitor PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visitor_Street__c</fullName>
        <label>Visitor Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_a_CAPA_be_issued_or_has_a_CAPA_been__c</fullName>
        <label>Will a CAPA be issued or has a CAPA been</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Complaint</label>
    <listViews>
        <fullName>All_with_Inv_and_PRE_infos</fullName>
        <columns>NAME</columns>
        <columns>BMX_Comments__c</columns>
        <columns>BMX_PRE__c</columns>
        <columns>BMX_Assessment_Created__c</columns>
        <columns>BMX_Case_Owner_Name__c</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>BMX_CaseNumber__c</columns>
        <columns>Visitor_Country__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All with Inv and PRE infos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BMX_Australia_Culture_Media</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>BAU</value>
        </filters>
        <label>Australia Culture Media</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_BTF_BioBall</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Reportable_Decision__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>BTF BioBall</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Biofire</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>AA8,B46,CA8,CC9</value>
        </filters>
        <label>Biofire</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Biofire_Defense</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>B91</value>
        </filters>
        <label>Biofire Defense</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Blood_Culture_Reagents</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>B18,B19,B20,B34</value>
        </filters>
        <label>Blood Culture Reagents</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Brazil_Culture_Media</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>B16</value>
        </filters>
        <label>Brazil Culture Media</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Clinic_Craponne_Combourg</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>BB,BW</value>
        </filters>
        <label>Clinic Craponne Combourg</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Clinic_Immuno_Reagents</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>BD,BS,B22,OE2,B45,B26</value>
        </filters>
        <label>Clinic Immuno Reagents</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Combourg_Chemunex_Reagents</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>A89,A90,B87,BA1,BA2,BA3,BA4,BC1,BC2,BC6,BC7</value>
        </filters>
        <label>Combourg Chemunex Reagents</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Combourg_Systems</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5 OR 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>C79,C80,C81,C82,C83,C87,C88,C89,C90,C91,CA4,CA5,CA6,CA7,CA9,C84</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>C85,C86,CA1,CC3,CC1,CC8,BA5,BA6,BA7,BA8,BA9,BB1,BB2,BB3,BB4,BB5</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>BB6,BB7,BB8,BB9</value>
        </filters>
        <label>Combourg Systems</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Endonext</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>C33,BC5</value>
        </filters>
        <label>Endonext</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Firenze_Systems</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>C52,CC6,CC1,C09,C11,C50,C53,C58,C59</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>C96,C46,C54,C55,CC2,C07,C17,C71</value>
        </filters>
        <label>Firenze Systems</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Indus_Craponne_Combourg</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>BI,B50</value>
        </filters>
        <label>Indus Craponne Combourg</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMX_Indus_Immuno_Reagents</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
        <columns>BMX_Subject__c</columns>
        <columns>BMX_Catalog_Profile__c</columns>
        <columns>BMX_Reference__c</columns>
        <columns>Lot_Number__c</columns>
        <columns>BMX_Serial_Number_Asset__c</columns>
        <columns>BMX_Error_Code__c</columns>
        <columns>BMX_Is_Reportable__c</columns>
        <columns>BMX_SIG_Code__c</columns>
        <columns>BMX_Account_Name__c</columns>
        <columns>BMX_Customer_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMX_INVEST__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>BMX_Investigation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>BMX_Child_Investigation_Linked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Catalog_Profile_Code__c</field>
            <operation>equals</operation>
            <value>BQ,BLI,BSI</value>
        </filters>
        <label>Indus Immuno Reagents</label>
        <sharedTo>
            <group>BMX_GCS</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Ticket No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Assessment_Not_Completed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( CMPL123CME__CMPL123_WF_Action__c ) &amp;&amp; CMPL123CME__CMPL123_WF_Action__c = "Close Complaint" &amp;&amp; Assessment_Completed__c = False</errorConditionFormula>
        <errorMessage>Please complete the Assessment and check the box Assessment Completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INV_Reference_Creation_Justification</fullName>
        <active>true</active>
        <description>INV Reference Creation Justification field is mandatory when Master Investigation Field is available</description>
        <errorConditionFormula>AND( NOT(ISBLANK(BMX_Investigation__c)),
ISCHANGED(BMX_Investigation__c), ISBLANK( INV_Reference_Creation_Justification__c ))</errorConditionFormula>
        <errorDisplayField>INV_Reference_Creation_Justification__c</errorDisplayField>
        <errorMessage>INV Reference Creation Justification field is mandatory when Master Investigation Field is available</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Investigation_Not_Completed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( CMPL123CME__CMPL123_WF_Action__c ) &amp;&amp; CMPL123CME__CMPL123_WF_Action__c = "Close Complaint" &amp;&amp; ISPICKVAL( Investigation_Status__c , "")</errorConditionFormula>
        <errorMessage>Please fill Investigation Status field</errorMessage>
    </validationRules>
</CustomObject>